syntax = "proto3";

option csharp_namespace = "Grpc.Core.Monitor";

package information;

import "google/protobuf/empty.proto";

service Information {
  rpc GetTemperature (google.protobuf.Empty) returns (TemperatureResponse);

  rpc GetDockerContainerInfoStream (google.protobuf.Empty) returns (stream DockerContainerInfoResponse);
  rpc GetDockerContainerResourceStream (google.protobuf.Empty) returns (stream DockerContainerResourceResponse);
}

message TemperatureResponse {
	string sign = 1;
	float value = 2;
}
 
message DockerContainerInfoResponse {
  string command = 1;
  string created_at = 2;
  string id = 3;
  string image = 4;
  string labels = 5;
  string local_volumes = 6;
  string mounts = 7;
  string names = 8;
  string networks = 9;
  string platform = 10;
  string ports = 11;
  string running_for = 12;
  string size = 13;
  string state = 14;
  string status = 15;
}

message DockerContainerResourceResponse {
  string block_io = 1;
  string cpu_perc = 2;
  string container = 3;
  string id = 4;
  string mem_perc = 5;
  string mem_usage = 6;
  string name = 7;
  string net_io = 8;
  string pids = 9;
}
 